src/PLASMA/NDDL/test/nddl/error/IncompatibleTypedefValue.nddl

typedef string {"foo","bar",1} myStrings;
